# ST

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  DEPLOYMENT.md  GATEWAY_README.md  QUICKSTART.md  README.md  SECURITY.md  SUMMARY.md  alerts.py  app.py  auth.py  cli.py  config.example.toml  config.py  config.toml  database.py  main.py  obd_simulator.py  pyproject.toml  requirements.txt  run_gateway.py  setup.py  setup.sh  telemetry.db  test_client.py  test_gateway.py  test_telemetry.py
focusst_telemetry/: __init__.py  config.py
focusst_telemetry/data/: __init__.py  parser.py
focusst_telemetry/ecu/: __init__.py  base.py  factory.py  mock.py  obd_bridge.py
focusst_telemetry/gateway/: __init__.py  app.py  broadcaster.py
focusst_telemetry/templates/: index.html
src/: __init__.py  config.py
src/api/: app.py
src/ecu/: __init__.py  base.py  factory.py  mock_ecu.py  obd_ecu.py
st_telemetry/: __init__.py  cli.py  config.py
st_telemetry/data_sources/: base.py  factory.py  mock_ecu.py  obd_bridge.py
st_telemetry/gateway/: server.py
static/css/: style.css
static/js/: dashboard.js  socketio-client.js  telemetry.js
templates/: dashboard.html  index.html
tests/unit/: test_config.py  test_factory.py  test_mock_ecu.py
